--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 		
-		<title> </title>
+		<title>Japan in Utah</title>
 	</head>
 	<body>
 <!-- put the header here-->
 
-<div class="header container">
+<div class="header container sections">
 	<img class="jpn-logo" src="images/japan2.png" alt="Logo">
 </div>
 
 
 <!-- put the main buttons/options here-->
 <div class="container">
-	<a href="http://ec2-35-167-162-79.us-west-2.compute.amazonaws.com/creativeLabOne/nonHomePageTemplate.html">
+	<a href="http://ec2-35-167-162-79.us-west-2.compute.amazonaws.com/creativeLabOne/pages.html#">
 		<img class="subj-btn col-sm-12 col-lg-6" src="images/button_food.jpg" alt="Resturants">
 	</a>
 	<a href="http://ec2-50-112-21-115.us-west-2.compute.amazonaws.com/Lab2/partials/temple.html">
@@ -32,28 +32,26 @@
 	<a href="destination_link">
 		<img class="subj-btn col-sm-12 col-lg-6" src="images/button_history.jpg" alt="Topaz">
 	</a>
-		<a href="https://www.jnto.go.jp/eng/">
-		<img class="subj-btn col-sm-12 col-lg-6" src="images/button_tourist.jpg" alt="Tourism">
+	<a href="https://en.wikipedia.org/wiki/Culture_of_Japan">
+		<img class="subj-btn col-sm-12 col-lg-6" src="images/wiki.png" alt="Culture on Wikipedia">
 	</a>
-		<a href="http://www.nihongodict.com/">
-		<img class="subj-btn col-sm-12 col-lg-6" src="" alt="Dictionary">
+	<a href="http://www.nihongodict.com/">
+		<img class="subj-btn col-sm-12 col-lg-6" src="images/Nihongodict.png" alt="Dictionary">
+	</a>
+		<a href="https://www.jnto.go.jp/eng/">
+		<img class="subj-btn col-sm-12 col-lg-6" src="images/jtno.png" alt="Tourism">
 	</a>
 		<a href="http://www.japantimes.co.jp/">
-		<img class="subj-btn col-sm-12 col-lg-6" src="" alt="Newspaper">
-	</a>
-		<a href="https://en.wikipedia.org/wiki/Culture_of_Japan">
-		<img class="subj-btn col-sm-12 col-lg-6" src="images/button_culture.jpg" alt="Culture/Wikipedia">
+		<img class="subj-btn col-sm-12 col-lg-6" src="images/japan_times.png" alt="Newspaper">
 	</a>
 </div>
 
 <!-- put the footer here-->
-	<div class="footer">
-		<p>Contact information regarding this website: place tel email</p>
-		<p>All photos and artwork property of Naomi Johnson (c)2017</p>
-	</div>
+<div class="footer">
+	<p>Website produced and maintained by BYU students Naomi Johnson and Scott Frodsham</p>
+	<p>All photos and artwork property of Naomi Johnson © 2017</p>
+</div>
 
-
-<!-- 
-	<p>--importance of being open minded  --aware of other cultures</p> -->
+	
 	</body>
 </html>
